--- a/static/style.css
+++ b/static/style.css
@@ -2,3 +2,50 @@ p {
     color: red;
     font-size: 40px;
 }
+
+body {
+    background-color: #f2f2f2;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+ /* Hamburger menu styles */
+ .hamburger {
+    display: none;
+    cursor: pointer;
+}
+
+.hamburger .line {
+    width: 30px;
+    height: 3px;
+    background-color: #000;
+    margin: 6px 0;
+}
+
+/* Navigation styles */
+nav {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 20px;
+    background-color: #f2f2f2;
+}
+
+nav ul {
+    display: flex;
+    list-style: none;
+}
+
+nav ul li {
+    margin-right: 20px;
+}
+
+/* Media query for responsive design */
+@media (max-width: 600px) {
+    nav ul {
+        display: none;
+    }
+    
+    .hamburger {
+        display: block;
+    }
+}
