--- a/static/style.css
+++ b/static/style.css
@@ -5,7 +5,7 @@ p {
 
 body {
     background-color: #f2f2f2;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
  /* Hamburger menu styles */
