--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,7 @@
-p {
-    color: red;
-    font-size: 40px;
-}
+
 
 body {
-    background-color: #f2f2f2;
+    background-color: #3c3d43;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -27,16 +24,22 @@ nav {
     justify-content: flex-end;
     align-items: center;
     padding: 20px;
-    background-color: #f2f2f2;
+    background-color: #3c3d43;
+    color: white;
+
 }
 
 nav ul {
     display: flex;
     list-style: none;
+    color: white;
 }
 
-nav ul li {
-    margin-right: 20px;
+nav ul li a {
+    margin-right: 30px;
+    color: white;
+    text-decoration: none;
+    font-size: 36px;
 }
 
 /* Media query for responsive design */
