--- a/static/style.css
+++ b/static/style.css
@@ -3,23 +3,28 @@
 body {
     background-color: #3c3d43;
     font-family: 'Roboto', sans-serif;
+    margin:0;
 }
 
  /* Hamburger menu styles */
  .hamburger {
     display: none;
     cursor: pointer;
+    position: absolute;
+    top: 20px;
+    right: 20px;
 }
 
 .hamburger .line {
     width: 30px;
     height: 3px;
-    background-color: #000;
+    background-color: white;
     margin: 6px 0;
 }
 
 /* Navigation styles */
 nav {
+    position: relative;
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -46,9 +51,31 @@ nav ul li a {
 @media (max-width: 600px) {
     nav ul {
         display: none;
+        position: absolute;
+        top: 40px; 
+        left: 0;
+        right: 0;
+        flex-direction: column;
+        background-color: #3c3d43; 
+        padding: 10px 20px;
+        box-sizing: border-box;
     }
     
     .hamburger {
         display: block;
+    }
+
+    .nav-links {
+        flex-direction: column;
+        width: 100%;
+        align-items: left;
+    }
+
+    .nav-links li {
+        margin: 10px 0;
+    }
+
+    .nav-links li a {
+        font-size: 24px;
     }
 }
