--- a/static/style.css
+++ b/static/style.css
@@ -50,7 +50,7 @@ nav ul li a {
 /* Css for line and circle on homepage */
 #center-line {
     position: fixed;
-    left: 50%;
+    left: 49.5%;
     top: 0;
     height: 100vh;
     width: 18px;
@@ -90,7 +90,26 @@ nav ul li a {
 }
 
 .circle h1 .cookery-school {
-    font-size: 16px; 
+    font-size: 18px;
+    padding-top: 20px; 
+}
+.location-container {
+    position: fixed;
+    left: 50%;
+    top: 66.67vh;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: white; 
+    z-index: 20;
+    width: fit-content;
+    background-color: #3c3d43;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.location-container span {
+    display: block;
+    font-weight: bold;
 }
 
 /* end of code for line and circle on home page */
