--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,3 @@
-
-
 body {
     background-color: #3c3d43;
     font-family: 'Roboto', sans-serif;
@@ -45,6 +43,27 @@ nav ul li a {
     color: white;
     text-decoration: none;
     font-size: 24px;
+    position: relative;
+}
+
+nav ul li {
+    position: relative;
+}
+
+nav ul li a:hover::after {
+    content: '';
+    display: block;
+    height: 2px;
+    background-color: white;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    transition: width 0.5s ease-in-out;
+}
+
+nav ul li a:hover::after {
+    width: 100%;
 }
 
 /* Css for line and circle on homepage */
@@ -140,8 +159,6 @@ nav ul li a {
         background-color: #3c3d43; 
         padding-top: 50px;
         min-height: 100vh;
-   
-       
         z-index: 40;
     }
     
