--- a/static/style.css
+++ b/static/style.css
@@ -18,6 +18,7 @@ body {
     height: 3px;
     background-color: white;
     margin: 6px 0;
+    z-index: 100;
 }
 
 /* Navigation styles */
@@ -29,7 +30,6 @@ nav {
     padding: 20px;
     background-color: #3c3d43;
     color: white;
-
 }
 
 nav ul {
@@ -71,10 +71,10 @@ nav ul li a:hover::after {
     position: absolute;
     left: 49.5%;
     top: 0;
-    height: 120vh;
+    height: 100vh;
     width: 18px;
     background-color: #E5D3B5;
-    z-index: 10;
+    z-index: 0;
 }
 
 .circle {
@@ -112,6 +112,7 @@ nav ul li a:hover::after {
     font-size: 18px;
     padding-top: 20px; 
 }
+
 .location-container {
     position: absolute;
     left: 50%;
@@ -132,20 +133,74 @@ nav ul li a:hover::after {
 }
 
 .full-screen-container {
-    height: 100vh;
+    height: 95vh;
     overflow: hidden;
 }
 
 /* end of css for line and circle on homepage */
 
 .full-chefs-kitchen {
-    position: absolute;
+    display:block;
     width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: center;
-    z-index: 30;
+    z-index: 100;
 }
+
+.grey-divider {
+    height: 80px;
+    background-color: #3C3D43; /* Adjust color as needed */
+    position: relative;
+    width: 100%;
+}
+
+.blue-divider {
+    background-color: #A5C4C4; /* Adjust color as needed */
+    height: 80px;
+    width: 100%;
+    position: relative;
+}
+
+.centered-michelin {
+    position: absolute;
+    width: 100px;
+    height: auto;
+    top: 40%;
+    right: 6%;
+    z-index: 40;
+}
+
+.circle-for-icon {
+    position: absolute;
+    top: 36%;
+    left: 8%;
+    width: 100px;
+    height: 100px;
+    background-color: #3C3D43;
+    border-radius: 50%;
+    display: flex;
+    z-index: 15;
+    justify-content: center;
+    align-items: center;
+}
+
+/* logos for circles */
+
+.school-logo {
+    width: 60px;
+    height: 60px;
+    z-index: 100;
+    margin-bottom: 10px;
+}
+
+.text-container-one {
+    height: 800px;
+    background-color: #E5D3B5;
+    display: flex;
+}
+
+
 
 /* Media query for responsive design */
 @media (max-width: 1250px) {
@@ -180,4 +235,45 @@ nav ul li a:hover::after {
     .nav-links li a {
         font-size: 24px;
     }
+}
+
+@media (max-width: 600px) {
+    .centered-michelin {
+        width: 50px;
+        top: 50%;
+        right: 3%;
+    }
+
+    .grey-divider {
+        height: 40px;
+        background-color: #3C3D43; /* Adjust color as needed */
+        position: relative;
+        width: 100%;
+    }
+
+    .blue-divider {
+        background-color: #A5C4C4; /* Adjust color as needed */
+        height: 40px;
+        width: 100%;
+    }
+
+    #center-line {
+        width: 10px;
+    }
+
+    .circle {
+        width: 200px;
+        height: 200px;
+   
+    }
+    .circle h1 span {
+        font-size: 24px;
+        font-weight: bolder;
+    }
+    
+    .circle h1 .cookery-school {
+        font-size: 18px;
+        padding-top: 20px; 
+}
+
 }
