--- a/static/style.css
+++ b/static/style.css
@@ -360,12 +360,45 @@ footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    text-align: center;
+    text-align: left;
+    list-style-type: none;
   }
   
   .footer-column {
+    display: flex;
+    justify-content: center; /* Center the content horizontally */
+    text-align: left; /* Keep text alignment to the left */
     flex: 1;
-    margin: 10px; /* Adjust spacing as needed */
+    margin: 10px;
+    list-style-type: none;
+    width: 100%;
+}
+
+.footer-column ul {
+    list-style-type: none;
+}
+
+.content-wrapper {
+    display: inline-flex; 
+    flex-direction: column; /* Align items in a column */
+    align-items: flex-start; /* Align items to the start (left) of the wrapper */
+    list-style-type: none;
+}
+
+#column1 {
+    text-align: center;    
+}
+
+#column2 ul, #column3 ul {
+    padding: 0;
+    min-height: 200px;
+}
+
+  #socials {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
   }
 
 /* Media query for responsive design */
@@ -555,19 +588,18 @@ footer {
     footer {
         flex-direction: column;
         align-items: center;
+       
       }
     
       #column1 {
         order: -1; /* Makes sure Column 1 is at the top */
         flex-basis: 100%; /* Take full width to center content */
+        text-align: center;
+       
       }
+      
     
-      /* Adjustments for column2 and column3 to be side by side */
-      #column2, #column3 {
-        flex-basis: calc(50% - 20px); /* Adjust based on margin to fit side by side */
-        text-align: center; /* Optional: Adjust text alignment as needed */
-      }
-    
+     
       footer {
         display: flex;
         flex-direction: row;
