Add padding to ul li

--- a/static/style.css
+++ b/static/style.css
@@ -391,6 +391,10 @@ footer {
     min-height: 100px;
 }
 
+#column2 ul li, #column3 ul li{
+    padding-bottom: 10px;
+}
+
   #socials {
     display: flex;
     gap: 20px;
