--- a/static/main.css
+++ b/static/main.css
@@ -153,6 +153,83 @@ nav ul li a:hover::after {
     color: black; 
 }
 
+/* Css for line and circle on about/courses/Revies/Contact */
+#center-line-1 {
+    position: absolute;
+    left: 49.5%;
+    top: 0;
+    height: 40vh;
+    width: 18px;
+    background-color: #E5D3B5;
+    z-index: 0;
+}
+
+.circle-1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 200px;
+    height: 200px;
+    background-color: #A5C4C4;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 15;
+    perspective: 1000px;
+}
+
+.circle-content-1 {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    backface-visibility: hidden; /* Hide the back side when it is rotated */
+    transition: transform 0.6s linear;
+}
+
+.circle-1 .front-1 {
+    z-index: 2;
+}
+
+.circle-1 .back-1 {
+    transform: rotateY(180deg); /* Flip the back content by 180 degrees */
+    z-index: 1;
+}
+
+.circle-1:hover .front-1 {
+    transform: rotateY(-180deg);
+}
+
+.circle-1:hover .back-1 {
+    transform: rotateY(0deg);
+}
+
+.circle-1 span, .circle-1 h1 {
+    text-align: center;
+}
+
+.circle-1 h1 {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.circle-1 h1 span {
+    font-size: 42px;
+    font-weight: bolder;
+}
+
+
+.circle-1 .back-1 span {
+    font-size: 20px;
+    color: black; 
+}
 
 .location-container {
     position: absolute;
@@ -546,6 +623,25 @@ footer img {
     .circle h1 .cookery-school {
         font-size: 18px;
         padding-top: 20px; 
+    }
+
+    /* CSS for circles on About/Courses/Reviews/Contact pages */
+
+    .circle-1 {
+        width: 130px;
+        height: 130px;
+        position: absolute;
+        top: 56%;
+    }
+    .circle-1 h1 span {
+        font-size: 24px;
+        font-weight: bolder;
+    }
+
+    #center-line-1 {
+        width: 10px;
+        top: 0;
+        height: 26vh;
     }
 
   
