--- a/static/about.css
+++ b/static/about.css
@@ -46,19 +46,99 @@
     height: fit-content;
 }
 
+/* meet the chefs section */
+.chef-container {
+    margin-left: 60px;
+    margin-right: 100px;
+    margin-bottom: 60px;
+    margin-top: 40px;
+    display: flex;
+}
+
+.chef-info-container {
+    display: flex;
+    align-items: flex-start;
+    min-width: 800px;
+    margin-left: 80px;
+}
+
+.chef-info-container ul {
+    margin: 0px;
+    list-style: none;
+    padding: 0px;
+}
+
+.chef-info-container ul {
+    margin: 0px;
+}
+
+.chef-info-container h3{
+    margin-left: 20px;
+}
+
+.chef-info-container p, button {
+    margin-left: 20px;
+}
+
+.chef-text {
+    max-width: 800px;
+    padding-left: 40px;
+}
+
+.download-btn {
+    display: inline-block;
+    padding: 10px 20px;
+    color: #fff;
+    background-color: #3c3d43;
+    border-radius: 5px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    transition: background-color 0.2s;
+    cursor: pointer;
+    margin-left: 20px;
+    border: black 1px solid;
+  }
+
+  .download-btn:hover {
+    background-color: #A5C4C4;
+    color:black;
+    font-weight: bold;
+  }
+
 @media screen and (max-width: 1400px) {
     /* adjust margin top to stop text overflow */
     .image-container {
       margin-top: 0px;
     }
 
+    .chef-container {
+        flex-direction: column;
+    }
+
+    .chef-info-container {
+        margin-left: 0px;
+        min-width: 200px;
+    }
+
+    .chef-text {
+        max-width: none;
+        padding-left: 0px;
+    }
+
+    .chef-container {
+        margin-left: 60px;
+        margin-right: 40px;
+        margin-bottom: 60px;
+        margin-top: 40px;
+        display: flex;
+    }
 }
 
 @media screen and (max-width: 1100px) {
 
     .about-container {
         margin-top: 0;
-       
         padding: 20px;
         margin-top: 44vh;
         align-items: center;
@@ -69,7 +149,6 @@
         flex-direction: column;
         align-items: center;
         flex-direction: column-reverse;
-       
     }
     
     .about-intro img {
@@ -111,4 +190,20 @@
         margin-right: 20px;
         margin-bottom: 60px;
       }
+
+      .chef-container {
+        margin-left: 20px;
+        margin-right: 20px;
+      }
+
+      .chef-info, img {
+        width: 100px;
+        height: auto;
+        margin: 0px;
+      }
+
+      .download-btn {
+        font-size: 16px;
+       
+    }
 }
