--- a/static/main.css
+++ b/static/main.css
@@ -2,6 +2,10 @@ html {
     scroll-behavior: smooth;
 }
 
+h3 {
+    margin-block-start: 0px;
+}
+
 body {
     background-color: #3c3d43;
     font-family: 'Roboto', sans-serif;
@@ -322,6 +326,11 @@ nav ul li a:hover::after {
     width: 50px;
     height: 50px;
     z-index: 100;
+}
+
+.chefs-hat-logo {
+    width: 60px;
+    height: 60px;
 }
 
 /* containers for sections */
@@ -685,6 +694,13 @@ footer img {
         height: 30px;
         z-index: 100;
     }
+
+    .chefs-hat-logo {
+        width: 30px;
+        height: 30px;
+    }
+
+    
 
     .dashed-line {
         border-left: 2px dashed black;
